# 3DUS-Based-Tumor-Coverage-Evaluation-And-Optimization

./: Applicator_angle_distance.m  CMakeLists.txt  README.md  Simulated_US.txt  createMarginVTK.py  createUnifomityVTK.py  prelog_rf.txt
Figs/: readme.txt
MarginTumorAblation/: Adjustment_computation.m  CMakeLists.txt  MarginTumorEstimation.m  MarginTumorEstimation_updated.m  RotationMatrixBetweenTwoVectors.m
MarginTumorAblation/ExtracteSurfacePoints/src/: CMakeLists.txt  main.cpp
MarginTumorAblation/plot3c/: plot3c.m
MarginTumorAblation/src/: main.cpp
examples/Sphere/: SPHERE.mtl  Transform.h5  sphere.scene
src/: main.cpp  ray.cpp  rfimage.h  scene.cpp  scene.h  transducer.h  transduer_copy.h
